--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,6 @@ p {
   line-height: 160%;
   font-size: 18px;
   font-weight: 300;
-  text-align: justify;
 }
 
 /* scroll bar */
